--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "engines": {
     "vscode": "^1.77.0"
   },
+  "author": {
+    "name": "Aziz Abdullaev"
+  },
   "categories": [
     "Snippets"
   ],
@@ -16,5 +19,13 @@
         "path": "./snippets/snippets.code-snippets"
       }
     ]
+  },
+  "bugs": {
+    "url": "https://github.com/azyzz228/html-in-h-sigil/issues",
+    "email": "aziz.abdullaev@proton.me"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/azyzz228/html-in-h-sigil"
   }
 }
