add publisher for new accounts

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": {
     "name": "Aziz Abdullaev"
   },
-  "publisher": "Aziz Abdullaev",
+  "publisher": "aziz-abdullaev",
   "categories": [
     "Snippets"
   ],
